Fixed purpose / audience statement

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -20,13 +20,13 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose of this website is for me to share my personal interests with family and friends!</p>
+    <p>The purpose of this website is to provide exciting information about Whitewater Rafting!</p>
     <!-- change this -->
 
     <h3>Audience</h3>
     <p>
-      This website is aimed towards people who are looking for ways to have fun with family and friends.
-      All devices should be supported through accessing this website.
+      This website is aimed towards people that enjoy and want to have fun Whitewater Rafting. It should be 
+      noted that the Rapids webpage is accessible through all devices.
     </p>
     <!-- change this -->
 
