--- a/wwr/index.html
+++ b/wwr/index.html
@@ -37,17 +37,17 @@
 
     <main class="home-grid">
         <!-- CARD CONTENT -->
-        <section rivers-card>
+        <section id="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
-        <section camping-card>
+        <section id="camping-card">
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
-        <section rapids-card>
+        <section id="rapids-card">
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
