--- a/challenge/challenge.html
+++ b/challenge/challenge.html
@@ -14,14 +14,14 @@
         <h3>---President Nelson</h3>
     </header>
     <main>
-        <ol><b>
+        <ol>
             <li><h4>Faith in the Lord Jesus Christ</h4></li>
             <li><h4>Repentance</h4></li>
             <li><h4>Baptism by immersion for the remission of sins</h4></li>
             <li><h4>Laying on of hands for the gift of the Holy Ghost</h4></li>
-        </b></ol>
+        </ol>
         <img src="nelson.jpeg" alt="President Russel M. Nelson">
-        <blockquote><p class="quote">"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p><blockquote>
+        <blockquote><p class="quote">"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p></blockquote>
     </main>
     <footer>
         <p>Russell M. Nelson</p>
