--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,80 +4,86 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
 </head>
 <body>
-    <header>
-        <!-- LOGO -->
-        <a id="logo-link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
-        </a>
-        <!-- NAVIGATION -->
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Page2</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
-            <a href="contact-us.html">Contact Us</a>
-        </nav>
-    </header>
+    <div id="content">
+        <header>
+            <!-- LOGO -->
+            <a id="logo-link" href="index.html">
+                <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            </a>
+            <!-- NAVIGATION -->
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page2</a>
+                <a href="site-plan-rafting.html">Site Plan</a>
+                <a href="contact-us.html">Contact Us</a>
+            </nav>
+        </header>
 
-    <!-- HERO -->
-    <div id="hero">
-        <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+        <!-- HERO -->
+        <div id="hero">
+            <div id="hero-box">
+                <img id="hero-img" src="images/hero.png" alt="People enjoying rafting">
+            </div>
         </div>
-    </div>
-    <section id="hero-msg">
-        <h1 class="home-title">Have an Adventure</h1>
-        <h4>Make Memories with Rapids</h4>
-        <div class="button-box">
-            <a class="book" href="contact-us.html">Book Now</a>
-        </div>
-    </section>
+        <section id="hero-msg">
+            <h1 class="home-title">Have an Adventure</h1>
+            <h4>Make Memories with Rapids</h4>
+            <div class="button-box">
+                <a class="book" href="contact-us.html">Book Now</a>
+            </div>
+        </section>
 
-    <main class="home-grid">
-        <!-- CARD CONTENT -->
-        <section id="rivers-card">
-            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section id="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section id="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <!-- MESSAGE -->
-        <section class="msg">
+        <main class="home-grid">
+            <!-- CARD CONTENT -->
+            <section id="rivers-card">
+                <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section id="camping-card">
+                <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section id="rapids-card">
+                <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+
+            <div id="background"></div>
+
+            <!-- MESSAGE -->
             <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
-            <a class="join" href="rivers.html">Join Us</a>
-        </section>
-    </main>
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
+                <a class="join" href="rivers.html">Join Us</a>
+            </section>
+        </main>
 
-    <footer>
-        <p>Rapids Webpage &copy; 2022 - Kyle Carroll</p>
-        <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contact-us.html">Contact Us</a></p>
-        <!-- SOCIAL -->
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>
+        <footer>
+            <p>Rapids Webpage &copy; 2022 - Kyle Carroll</p>
+            <p><a href="site-plan-rafting.html">Site Plan</a></p>
+            <p><a href="contact-us.html">Contact Us</a></p>
+            <!-- SOCIAL -->
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
 
