added padding, margins, and fonts to wwr site

--- a/challenges/challenge1/chall.html
+++ b/challenges/challenge1/chall.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="challenge.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="chall.css">
+    <title>Challenge 2</title>
 </head>
 <body>
     <header>
@@ -20,7 +20,7 @@
             <li><h4>Baptism by immersion for the remission of sins</h4></li>
             <li><h4>Laying on of hands for the gift of the Holy Ghost</h4></li>
         </ol>
-        <img src="nelson.jpeg" alt="President Russel M. Nelson">
+        <img src="images/nelson.jpeg" alt="President Russel M. Nelson">
         <blockquote><p class="quote">"Because of the Savior's Atonement, His gospel provides an invitation to keep changing, growing, and becoming more pure."</p></blockquote>
     </main>
     <footer>
