Added start of personal webpage

--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -1,4 +1,4 @@
-
+<!-- https://byui-wdd.github.io/wdd130/activities/w07-personal-site-plan.html -->
 <!DOCTYPE html>
 <html lang="en-us">
     
@@ -21,17 +21,21 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>Out of all the exercises in the world, swimming is one of the best out there.
+        Each stroke has its own benefit towards different muscle groups.
+        There are some great workouts you can do to make your swimming experience even better!</p>
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Are you curious about what each swim stroke does for you? 
+        Or maybe you are looking for some great swimming workouts.
+        I assure you that this website will provide all that.</p>
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/swim-logo2.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
