--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -12,7 +12,7 @@
     <header>
       <h1>Swimmer's Guide Site Plan</h1>
       <h2>Kyle Carroll</h2>
-      <h2>WDD 130-W07</h2>
+      <h2>WDD 130-14</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
