Added pages to personal siteplan

--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -92,8 +92,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Strokes & Races</a>
+        <a href="#">Workouts</a>
       </nav>
       <hr>
       <h2>
@@ -129,30 +129,49 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        People will come to my site to learn about what swimming can do for you. Swimming is so good for your body. It literally works almost every single muscle. If visitors are having questions that the site doesn’t really answer well, there will be an FAQ. There will be a page that shows what foods are good for you. I know shopping for swimwear / gear can be tricky. I can recommend websites to use for shopping. I have experience with swimming (10+ years). I would consider myself good at the sport. I will provide quality information that I learned from my experiences with it.
+        Why should I consider even swimming?
+        What makes swimming different from other sports?
+        Why is swimming good for my body?
+        What will swimming do for me?
+        What are some down-sides about swimming?
+        What should I be eating?
+        What equipment do you need to get started with swimming?
+        Is swimming a group sport or is it an individual sport?
+        Does swimming help with sleep? How much sleep should I be getting each night?
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
+        <img src="images/Personal Website Images/Swimming_HOME/lanelines.jpg" alt="image for homepage">
+        <img src="images/Personal Website Images/Swimming_HOME/me-swimming.jpg" alt="image for homepage">
+        <img src="images/Personal Website Images/Swimming_HOME/tired.jpg" alt="image for homepage">
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Page 2</h3>
       <p>
-        [Written copy for the Page 2 here]
+        My website will explain what each swimming stroke does for you. The 4 strokes that I will be addressing is Butterfly, Backstroke, Breaststroke, and Freestyle. Visitors on my website might want to see videos on what the stroke should look like. A google search that is used to search for a stroke that displays what it does for you. A page on my website that is called Strokes. It would have 4 sections that are based on the 4 primary strokes.
+        What strokes are there in swimming?
+        What stroke involves the most work?
+        What strokes work this part of my body?
+        Are there strokes that are harder than others?
+        My website will display each event that is categorized by either Distance, Mid-Distance, or Sprints. I will also try to explain every single event that swimming offers at competitive swim meets. A page called Types of Swimmers. What other sports has this person done in his or her life. For example, being a runner puts you at a position where you might consider distance or mid-distance, over sprints. You are usually considered a distance or mid-distance swimmer if you have great endurance and are good at those types of events.
+        How do I know if I am a distance, mid-distance, or distance swimmer?
+        What event should I try out?
+        What are good goal times?
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+        <img src="images/Personal Website Images/Strokes/breaststroke.jpg" alt="image for page">
+        <img src="images/Personal Website Images/Strokes/butterfly.jpg" alt="image for page">
+        <img src="images/Personal Website Images/Strokes/girl-swimming.jpg" alt="image for page">
+        <img src="images/Personal Website Images/Strokes/take-your-marks.jpg" alt="image for page">
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Page 3</h3>
       <p>
-        [Written copy for the Page 3 here]
+        People will come to my site to learn about workouts that they have never done before. Maybe they have, I don’t know. Some of the workouts will be hard, others will be easy. They will each focus on either distance, mid-distance, or sprints. A page that is called workouts; it would obviously show workouts. To know a workout for you, you need to know what stroke and event you want to do. You need something to look towards when training. Maybe you are working out to stay in shape. My website will display great workouts to do.  The content that I will have on my website will be free. You might have to buy workouts on other sites, but not this one!
+        What type of workout should I do?
+        What makes a good workout?
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
-
+        <img src="images/Personal Website Images/Workouts/diving.jpg" alt="image for page3">
+        <img src="images/Personal Website Images/Workouts/guy-swimming.jpg" alt="image for page3">
       </ul>
       <hr>
       <h2>
