--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a href="positioning.html">Positioning Activity</a>
         <a href="#">Personal Website</a>
         <a href="swimmers-guide/site-plan.html">Personal Siteplan</a>
+        <a href="challenges/challenge4/chall4.html"> Challenge 4</a>
     </nav>
     <p>Kyle Carroll - WDD 130</p>
 </body>
