--- a/challenges/challenge4/chall4.html
+++ b/challenges/challenge4/chall4.html
@@ -12,18 +12,26 @@
         <div class="contentGrid">
             <img src="images/w09_ice_img.jpg" alt="Ice image">
             <h4>3 weeks ago</h4>
-            <h2>Post Three</h2>
-            <p class="main-text">
+            <h1>Post Three</h2>
+            <p>
                 This would be some text to go here and tell you about this awesome article that they should definitely read.
                 This would be some text to go here and tell you about this awesome article that they should definitely read.
                 This would be some text to go here.
             </p>
-            <h2 id="bottomHeading1">5<sup>m</sup></h2>
-            <p id="bottomP1">READ</p>
-            <h2 id="bottomHeading2">2031</h2>
-            <p id="bottomP2">VIEWS</p>
-            <h2 id="bottomHeading3">15</h2>
-            <p id="bottomP3">COMMENTS</p>
+            <div class="grid2">
+                <div id="left">
+                    <h2>5<sup>m</sup></h2>
+                    <p>READ</p>
+                </div>
+                <div id="middle">
+                    <h2>2031</h2>
+                    <p>VIEWS</p>
+                </div>
+                <div id="right">
+                    <h2>15</h2>
+                    <p>COMMENTS</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
