--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -226,21 +226,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Forgot to get link...
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Wireframes/Home-Wireframe.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        https://wireframe.cc/OArndU
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Wireframes/Strokes-Wireframe.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        https://wireframe.cc/5pyPGL
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Wireframes/Workouts-Wireframe.png" alt="page 3 wireframe">
     </main>
   </body>
 
