--- a/wwr/index.html
+++ b/wwr/index.html
@@ -17,7 +17,7 @@
             <!-- NAVIGATION -->
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page2</a>
+                <a href="FAQ.html">FAQ</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contact-us.html">Contact Us</a>
             </nav>
@@ -56,7 +56,6 @@
             </section>
 
             <div id="background"></div>
-
             <!-- MESSAGE -->
             <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
             <section class="msg">
