--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -97,9 +97,9 @@
     <h3>Navigation</h3>
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Page2</a>
-      <a href="#">Contact Us</a>
+      <a href="index.html">Home</a>
+      <a href="FAQ.html">FAQ</a>
+      <a href="index.html">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
@@ -125,7 +125,7 @@
 
     <h3>[Page 2]</h3>
 
-    <img src="images/page2-wireframe.png" alt="page 2 wireframe">
+    <img src="images/page2/page2-wireframe.png" alt="page 2 wireframe">
   </main>
 </body>
 
