Optimized and Fixed card margins on wwr

--- a/wwr/FAQ.html
+++ b/wwr/FAQ.html
@@ -36,7 +36,7 @@
             </section>
         </div>
 
-        <main class="home-grid2">
+        <main class="faq-grid">
             <div class="head-bar">
                 <h1>Frequently Asked Questions</h1>
             </div>
@@ -125,7 +125,7 @@
                 <!-- END QUESTIONS -->
             </section>
             <div class="background-template">
-                <div class="background">
+                <div id="faq-background">
                     <img src="images/page2/hiking-to-rapids.jpg" alt="Hiking to the Rapids!">
                     <div class="text-box">
                         <h2>Help</h2>
