--- a/wwr/index.html
+++ b/wwr/index.html
@@ -78,7 +78,7 @@
                     <img src="images/twitter.png" alt="twitter icon">
                 </a>
                 <a href="https://instagram.com" target="_blank">
-                    <img src="images/instagram.png" alt="instagram icon">
+                    <img src="images/social-media/instagram.png" alt="instagram icon">
                 </a>
             </div>
         </footer>
