Added all pages - html not done

--- a/swimmers-guide/index.html
+++ b/swimmers-guide/index.html
@@ -17,8 +17,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Strokes</a>
-                <a href="#">Workouts</a>
+                <a href="strokes.html">Strokes</a>
+                <a href="workouts.html">Workouts</a>
             </nav>
         </header>
 
