Finished all html personal site page layouts

--- a/swimmers-guide/index.html
+++ b/swimmers-guide/index.html
@@ -13,7 +13,7 @@
         <!-- NAVIGATION -->
         <header>
             <a id="logo-link" href="index.html">
-                <img src="images/swim-logo2.png">
+                <img src="images/swim-logo2.png" alt="logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,11 +25,11 @@
         <!-- HERO -->
         <div id="hero">
             <div id="hero-box">
-                <img src="images/Personal Website Images/Swimming_HOME/lanelines.jpg" alt="Pool with Lanelines">
+                <img src="images/personal-website-images/swimming-home/lanelines.jpg" alt="Pool with Lanelines">
             </div>
             <div id="hero-msg">
-                <h1 id="home-title">Swimmer's Guide</h1>
-                <h2 id="home-title">Learn To Be a Swimming Expert</h2>
+                <h1 class="home-title">Swimmer's Guide</h1>
+                <h2 class="home-title">Learn To Be a Swimming Expert</h2>
             </div>
         </div>
 
@@ -37,7 +37,7 @@
         <main class="home-grid">
 
             <section class="main-head-bar">
-                <h3>About Swimming</h2>
+                <h3>About Swimming</h3>
             </section>
 
             <div id="main-background-grid">
@@ -52,11 +52,11 @@
                     constantly have to blow your nose. The last thing is being tired. This depends on how much sleep you get. If you are planning to swim 
                     the next day, please just make sure to get a good night's rest.
                 </p>
-                <img id="tired-img" src="images/Personal Website Images/Swimming_HOME/tired.jpg" alt="A person who's tired">
+                <img id="tired-img" src="images/personal-website-images/swimming-home/tired.jpg" alt="A person who's tired">
 
                 <!-- Side Content -->
-                <section class="headbar">
-                    <h3>Foods</h2>
+                <section class="head-bar">
+                    <h3>Foods</h3>
                 </section>
                 <p>
                     Good foods for swimming include pasta, sandwiches, fruits and veggies, cereal, and yogurt. If you want that extra dose of energy before 
@@ -67,24 +67,25 @@
                 </p>
 
                 <div id="shopping-background-grid">
-                    <section class="headbar">
-                        <h3>Shopping</h2>
+                    <section class="head-bar">
+                        <h3>Shopping</h3>
                     </section>
                     <p>
                         I know shopping for swimwear and gear can be tricky. In my experience, I have had to gone through at least 50 pairs of 
                         goggles. Some places that are good for shopping for swimwear are:
-                        <ul>
-                            <li><a>amazon.com</a></li>
-                            <li><a>swimoutlet.com</a></li>
-                            <li><a>us.speedo.com</a></li>
-                            <li><a>arenasport.com</a></li>
-                        </ul>
                     </p>
+                    <ul>
+                        <li><a>amazon.com</a></li>
+                        <li><a>swimoutlet.com</a></li>
+                        <li><a>us.speedo.com</a></li>
+                        <li><a>arenasport.com</a></li>
+                    </ul>
                 </div>
 
                 <aside>
-                    <img src="images/Personal Website Images/Swimming_HOME/me-swimming.jpg" alt="Me swimming the 200 Freestyle">
-                    <p class="footnote">This is a picture of me during my senior year of high school. I am swimming the 200 Freestyle. Gotta love
+                    <img src="images/personal-website-images/swimming-home/me-swimming.jpg" alt="Me swimming the 200 Freestyle">
+                    <p class="footnote">
+                        This is a picture of me during my senior year of high school. I am swimming the 200 Freestyle. Gotta love
                         high school swimming!
                     </p>
                 </aside>
