--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -200,8 +200,8 @@
         20x 25s @30secs on goal time (100 pace)
         10x 100s @2min on goal time (500 pace)
 
-        If you miss your time, you sit out for one and go for the next one (50s and 100s), and for 25s, you sit out for 2. After completing 
-        work out, how many did you make? Record it and try it again later to see if you can beat your time.
+        If you miss your time, you sit out for one and go for the next one (50s and 100s), and for 25s, you sit out for 2.
+        After completing work out, how many did you make? Record it and try it again later to see if you can beat your time.
       </p>
       <p>
         Athletic 50s
