--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
         <a href="positioning.html">Positioning Activity</a>
-        <a href="#">Personal Website</a>
+        <a href="swimmers-guide/index.html">Personal Website</a>
         <a href="swimmers-guide/site-plan.html">Personal Siteplan</a>
-        <a href="challenges/challenge4/chall4.html"> Challenge 4</a>
     </nav>
     <p>Kyle Carroll - WDD 130</p>
 </body>
