fixed homepage links

--- a/swimmers-guide/index.html
+++ b/swimmers-guide/index.html
@@ -1,3 +1,5 @@
+<!-- Most info gotten from https://www.fitandwell.com/features/does-swimming-build-muscle (no idea where to put citations)--> 
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -75,10 +77,10 @@
                         goggles. Some places that are good for shopping for swimwear are:
                     </p>
                     <ul>
-                        <li><a>amazon.com</a></li>
-                        <li><a>swimoutlet.com</a></li>
-                        <li><a>us.speedo.com</a></li>
-                        <li><a>arenasport.com</a></li>
+                        <li><a href="https://www.amazon.com/">amazon.com</a></li>
+                        <li><a href="https://swimoutlet.com/">swimoutlet.com</a></li>
+                        <li><a href="https://us.speedo.com">us.speedo.com</a></li>
+                        <li><a href="https://arenasport.com/">arenasport.com</a></li>
                     </ul>
                 </div>
 
