--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -99,7 +99,7 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="FAQ.html">FAQ</a>
-      <a href="index.html">Contact Us</a>
+      <a href="contact-us.html">Contact Us</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
