Added CSS to personal site home page

--- a/swimmers-guide/index.html
+++ b/swimmers-guide/index.html
@@ -15,7 +15,7 @@
         <!-- NAVIGATION -->
         <header>
             <a id="logo-link" href="index.html">
-                <img src="images/swim-logo2.png" alt="logo">
+                <img class="logo" src="images/swim-logo2.png" alt="logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -27,8 +27,9 @@
         <!-- HERO -->
         <div id="hero">
             <div id="hero-box">
-                <img src="images/personal-website-images/swimming-home/lanelines.jpg" alt="Pool with Lanelines">
+                <img id="hero-img" src="images/personal-website-images/swimming-home/lanelines.jpg" alt="Pool with Lanelines">
             </div>
+            <div id="hero-msg-block"></div>
             <div id="hero-msg">
                 <h1 class="home-title">Swimmer's Guide</h1>
                 <h2 class="home-title">Learn To Be a Swimming Expert</h2>
@@ -42,57 +43,55 @@
                 <h3>About Swimming</h3>
             </section>
 
-            <div id="main-background-grid">
+            <div id="main-background"></div>
 
-                <!-- Intro -->
+            <!-- Intro -->
+            <div id="main-paragraph-background"></div>
+            <p class="main-paragraph">
+                Swimming is by far one of the best sports that will work most of your body. It even works the smaller muscles that support your 
+                joints. I say this from experience. After a workout, if I didn't stretch, the parts that I worked the most will be aching. Like other 
+                sports, stretching is a must. If you don't do it, you are just hurting yourself.<br>
+                <br>
+                From my experience, there were some things I didn't like about swimming.
+                One of those is having to always put lotion on. Your skin will get dry. Another thing is having a runny nose all the time. You will 
+                constantly have to blow your nose. The last thing is being tired. This depends on how much sleep you get. If you are planning to swim 
+                the next day, please just make sure to get a good night's rest.
+            </p>
+            <img id="tired-img" src="images/personal-website-images/swimming-home/tired.jpg" alt="A person who's tired">
+
+            <section id="food-head-bar">
+                <h3>Foods</h3>
+            </section>
+            <p id="food-paragraph">
+                Good foods for swimming include pasta, sandwiches, fruits and veggies, cereal, and yogurt. If you want that extra dose of energy before 
+                your swim, I recommend eating pasta, or anything with carbs. I know something that helped me during the swim season was eating a bagel 
+                before my workout. It made my experience with swimming so much better. When it comes to swimming, carbohydrates are your best friend. 
+                Don't forget about chocolate milk! Milk has lots of nutrients. It is a great protein source. Chocolate milk has a great flavor. 
+                I'd recommend drinking it after your workout. You can, of course, supplement it with a protein drink, but that is up to you.
+            </p>
+
+            <div id="shopping-background"></div>
+            <section id="shopping-head-bar">
+                <h3>Shopping</h3>
+            </section>
+            <div id="shopping-paragraph">
                 <p>
-                    Swimming is by far one of the best sports that will work most of your body. It even works the smaller muscles that support your 
-                    joints. I say this from experience. After a workout, if I didn't stretch, the parts that I worked the most will be aching. Like other 
-                    sports, stretching is a must. If you don't do it, you are just hurting yourself.<br>
-                    From my experience, there were some things I didn't like about swimming. 
-                    One of those is having to always put lotion on. Your skin will get dry. Another thing is having a runny nose all the time. You will 
-                    constantly have to blow your nose. The last thing is being tired. This depends on how much sleep you get. If you are planning to swim 
-                    the next day, please just make sure to get a good night's rest.
+                    I know shopping for swimwear and gear can be tricky. In my experience, I have had to gone through at least 50 pairs of 
+                    goggles. Some places that are good for shopping for swimwear are:
                 </p>
-                <img id="tired-img" src="images/personal-website-images/swimming-home/tired.jpg" alt="A person who's tired">
-
-                <!-- Side Content -->
-                <section class="head-bar">
-                    <h3>Foods</h3>
-                </section>
-                <p>
-                    Good foods for swimming include pasta, sandwiches, fruits and veggies, cereal, and yogurt. If you want that extra dose of energy before 
-                    your swim, I recommend eating pasta, or anything with carbs. I know something that helped me during the swim season was eating a bagel 
-                    before my workout. It made my experience with swimming so much better. When it comes to swimming, carbohydrates are your best friend. 
-                    Don't forget about chocolate milk! Milk has lots of nutrients. It is a great protein source. Chocolate milk has a great flavor. 
-                    I'd recommend drinking it after your workout. You can, of course, supplement it with a protein drink, but that is up to you.
-                </p>
-
-                <div id="shopping-background-grid">
-                    <section class="head-bar">
-                        <h3>Shopping</h3>
-                    </section>
-                    <p>
-                        I know shopping for swimwear and gear can be tricky. In my experience, I have had to gone through at least 50 pairs of 
-                        goggles. Some places that are good for shopping for swimwear are:
-                    </p>
-                    <ul>
-                        <li><a href="https://www.amazon.com/">amazon.com</a></li>
-                        <li><a href="https://swimoutlet.com/">swimoutlet.com</a></li>
-                        <li><a href="https://us.speedo.com">us.speedo.com</a></li>
-                        <li><a href="https://arenasport.com/">arenasport.com</a></li>
-                    </ul>
-                </div>
-
-                <aside>
-                    <img src="images/personal-website-images/swimming-home/me-swimming.jpg" alt="Me swimming the 200 Freestyle">
-                    <p class="footnote">
-                        This is a picture of me during my senior year of high school. I am swimming the 200 Freestyle. Gotta love
-                        high school swimming!
-                    </p>
-                </aside>
-
+                <ul>
+                    <li><a href="https://www.amazon.com/">amazon.com</a></li>
+                    <li><a href="https://swimoutlet.com/">swimoutlet.com</a></li>
+                    <li><a href="https://us.speedo.com">us.speedo.com</a></li>
+                    <li><a href="https://arenasport.com/">arenasport.com</a></li>
+                </ul>
             </div>
+
+            <img id="me" src="images/personal-website-images/swimming-home/me-swimming.jpg" alt="Me swimming the 200 Freestyle">
+            <p class="footnote">
+                This is a picture of me during my senior year of high school. I am swimming the 200 Freestyle. Gotta love
+                high school swimming!
+            </p>
         </main>
     
         <!-- END -->
