--- a/swimmers-guide/strokes.html
+++ b/swimmers-guide/strokes.html
@@ -13,7 +13,7 @@
         <!-- NAVIGATION -->
         <header>
             <a id="logo-link" href="index.html">
-                <img src="images/swim-logo2.png" alt="logo">
+                <img class="logo" src="images/swim-logo2.png" alt="logo">
             </a>
             <nav>
                 <a href="index.html">Home</a>
@@ -25,8 +25,9 @@
         <!-- HERO -->
         <div id="hero">
             <div id="hero-box">
-                <img src="images/personal-website-images/swimming-home/lanelines.jpg" alt="Pool with Lanelines">
+                <img id="hero-img" src="images/personal-website-images/swimming-home/lanelines.jpg" alt="Pool with Lanelines">
             </div>
+            <div id="hero-msg-block"></div>
             <div id="hero-msg">
                 <h1 class="home-title">Swimmer's Guide</h1>
                 <h2 class="home-title">Learn To Be a Swimming Expert</h2>
