Finished strokes page on personal site

--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -91,9 +91,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Strokes & Races</a>
-        <a href="#">Workouts</a>
+        <a href="index.html">Home</a>
+        <a href="index.html">Strokes & Races</a>
+        <a href="workouts.html">Workouts</a>
       </nav>
       <hr>
       <h2>
@@ -154,7 +154,7 @@
         <img src="images/Personal Website Images/Swimming_HOME/me-swimming.jpg" alt="image for homepage">
         <img src="images/Personal Website Images/Swimming_HOME/tired.jpg" alt="image for homepage">
       </ul>
-      <h3>Page 2</h3>
+      <h3>Strokes Page</h3>
       <!-- Strokes -->
       <p>
         When it comes to talking about swim strokes, they each have their own function of what muscles they work. 
@@ -184,7 +184,7 @@
         <img src="images/Personal Website Images/Strokes/girl-swimming.jpg" alt="image for page">
         <img src="images/Personal Website Images/Strokes/take-your-marks.jpg" alt="image for page">
       </ul>
-      <h3>Page 3</h3>
+      <h3>Workouts Page</h3>
       <!-- Workouts -->
       <p>
         20 Minutes of Fun
