--- a/swimmers-guide/strokes.html
+++ b/swimmers-guide/strokes.html
@@ -36,54 +36,52 @@
 
         <main class="strokes-grid">
 
-            <section class="strokes-head-bar">
+            <section id="strokes-main-head-bar">
                 <h3>Strokes</h3>
             </section>
 
-            <div id="strokes-background-grid">    
-                <!-- Intro -->
-                <p>
-                    When it comes to talking about swim strokes, they each have their own function of what muscles they work. 
-                    The strokes that I will be addressing are Butterfly, Backstroke, Breaststroke, and Freestyle (the 4 main strokes).
-                </p>
-                <img src="images/personal-website-images/strokes/take-your-marks.jpg" alt="Take your marks!">
+            <div id="strokes-background"></div>    
+            <!-- Intro -->
+            <p id="intro-paragraph">
+                When it comes to talking about swim strokes, they each have their own function of what muscles they work. 
+                The strokes that I will be addressing are Butterfly, Backstroke, Breaststroke, and Freestyle (the 4 main strokes).
+            </p>
+            <img id="TYM" src="images/personal-website-images/strokes/take-your-marks.jpg" alt="Take your marks!">
 
-                <!-- Buttefly -->
-                <section class="head-bar">
-                    <h3>Butterfly</h3>
-                </section>
-                <p>
-                    This stroke works your core and lower back. The core and lower back lift your body out of the water upwards. 
-                    The glutes control your legs; they keep them together. Your pectorals, lats, hamstrings, calves, shoulders, biceps, 
-                    and triceps get worked hard when performing this stroke correctly. In my opinion, this stroke is painful, but when 
-                    you get good at it, it can be fast.
-                </p>
-                <img src="images/personal-website-images/strokes/butterfly.jpg" alt="Person swimming Butterfly">
+            <!-- Buttefly -->
+            <section id="BU-head-bar">
+                <h3>Butterfly</h3>
+            </section>
+            <p id="BU-paragraph">
+                This stroke works your core and lower back. The core and lower back lift your body out of the water upwards. 
+                The glutes control your legs; they keep them together. Your pectorals, lats, hamstrings, calves, shoulders, biceps, 
+                and triceps get worked hard when performing this stroke correctly. In my opinion, this stroke is painful, but when 
+                you get good at it, it can be fast.
+            </p>
+            <img id="BU" src="images/personal-website-images/strokes/butterfly.jpg" alt="Person swimming Butterfly">
 
-                <!-- Beaststroke -->
-                <section class="head-bar">
-                    <h3>Breaststroke</h3>
-                </section>
-                <p>
-                    The middle and lower back muscles are used with every cycle of arm stroke you do (pectorals and latissimus). When kicking, 
-                    the glutes and quads are the main muscles that do the work.
-                </p>
-                <img src="images/personal-website-images/strokes/breaststroke.jpg" alt="Person swimming Breaststroke">
+            <!-- Beaststroke -->
+            <section id="BR-head-bar">
+                <h3>Breaststroke</h3>
+            </section>
+            <p id="BR-paragraph">
+                The middle and lower back muscles are used with every cycle of arm stroke you do (pectorals and latissimus). When kicking, 
+                the glutes and quads are the main muscles that do the work.
+            </p>
+            <img id="BR" src="images/personal-website-images/strokes/breaststroke.jpg" alt="Person swimming Breaststroke">
 
-                <!-- Backstroke & Freestyle -->
-                <section class="head-bar">
-                    <h3>Backstroke & Freestyle</h3>
-                </section>
-                <p>
-                    These 2 strokes are very similar. The only difference between them is that you are either laying on your front or back. With 
-                    each cycle of stroke, your biceps, triceps, and back muscles are doing most of the work. When you want to breath, you have 
-                    to use your neck muscles to turn your head. It is recommended when doing these 2 strokes that you have your hips high. This 
-                    helps you float and glide through the water efficiently. It will also just make the stroke way less tiring (it will feel like 
-                    you are doing less work). When kicking, the muscles that are used are the quads, hamstrings, and calves.
-                </p>
-                <img src="images/personal-website-images/strokes/freestyle.jpg" alt="Person swimming Freestyle">
-
-            </div>
+            <!-- Backstroke & Freestyle -->
+            <section id="BF-head-bar">
+                <h3>Backstroke & Freestyle</h3>
+            </section>
+            <p id="BF-paragraph">
+                These 2 strokes are very similar. The only difference between them is that you are either laying on your front or back. With 
+                each cycle of stroke, your biceps, triceps, and back muscles are doing most of the work. When you want to breath, you have 
+                to use your neck muscles to turn your head. It is recommended when doing these 2 strokes that you have your hips high. This 
+                helps you float and glide through the water efficiently. It will also just make the stroke way less tiring (it will feel like 
+                you are doing less work). When kicking, the muscles that are used are the quads, hamstrings, and calves.
+            </p>
+            <img id="BF" src="images/personal-website-images/strokes/freestyle.jpg" alt="Person swimming Freestyle">
 
         </main>
 
