--- a/swimmers-guide/workouts.html
+++ b/swimmers-guide/workouts.html
@@ -41,51 +41,45 @@
                 <h3>Workouts</h3>
             </section>
             
-            <div id="workouts-background"></div>
+            <div id="workouts-background"></div>'
+            
+            <section id="first-head-bar">
+                <h3>20 Minutes of Fun</h3>
+            </section>
+            <p id="workout1-paragraph">
+                20 Minutes of Fun <br>
+                4x <br>
+                Round 1 - 4x 50 Freestyle @1min,  1x 25 @1min <br>
+                Round 2 - 3x 50 Freestyle @1min, 2x 25 Freestyle @1min <br>
+                Round 3 - 2x 50 Freestyle @1min, 3x 25 Freestyle @1min <br>
+                Round 4 - 1x 50 Freestyle @1min, 4x 25 Freestyle @1min 
+            </p>
 
-            <!-- <div id="workout-1">
-                <section class="head-bar">
-                    <h3>20 Minutes of Fun</h3>
-                </section>
-                <p>
-                    20 Minutes of Fun <br>
-                    4x <br>
-                    Round 1 - 4x 50 Freestyle @1min,  1x 25 @1min <br>
-                    Round 2 - 3x 50 Freestyle @1min, 2x 25 Freestyle @1min <br>
-                    Round 3 - 2x 50 Freestyle @1min, 3x 25 Freestyle @1min <br>
-                    Round 4 - 1x 50 Freestyle @1min, 4x 25 Freestyle @1min 
-                </p>
-            </div>
+            <section id="second-head-bar">
+                <h3>U.S.R.P.T. <br> (United States Race Pace Training)</h3>
+            </section>
+            <p id="workout2-paragraph">
+                20x 50s @1min on goal time (200 pace) <br>
+                20x 25s @30secs on goal time (100 pace) <br>
+                10x 100s @2min on goal time (500 pace) <br>
+                <br>
+                If you miss your time, you sit out for one and go for the next one (50s and 100s), and for 25s, you sit out for 2. <br>
+                After completing work out, how many did you make? Record it and try it again later to see if you can beat your time. <br>
+            </p>
 
-            <div id="workout-2">
-                <section class="head-bar">
-                    <h3>U.S.R.P.T. <br> (United States Race Pace Training)</h3>
-                </section>
-                <p>
-                    20x 50s @1min on goal time (200 pace) <br>
-                    20x 25s @30secs on goal time (100 pace) <br>
-                    10x 100s @2min on goal time (500 pace) <br>
-                    <br>
-                    If you miss your time, you sit out for one and go for the next one (50s and 100s), and for 25s, you sit out for 2. <br>
-                    After completing work out, how many did you make? Record it and try it again later to see if you can beat your time. <br>
-                </p>
-                <img src="images/personal-website-images/workouts/guy-swimming.jpg" alt="A man working hard">
-            </div>
-
-            <div id="workout-3">
-                <section class="head-bar">
-                    <h3>Athletic 50s</h3>
-                </section>
-                <p>
-                    4x <br>
-                    10x pushups @ side <br>
-                    Jump in -> 25 freestyle <br>
-                    When @ other end -> 10x streamline jumps <br>
-                    Athletic hop out <br>
-                    5x burpees <br>
-                    Jump in -> 25 freestyle, sprint for half away and easy rest of the way. <br>
-                </p>
-            </div> -->
+            <section id="third-head-bar">
+                <h3>Athletic 50s</h3>
+            </section>
+            <p id="workout3-paragraph">
+                4x <br>
+                10x pushups @ side <br>
+                Jump in -> 25 freestyle <br>
+                When @ other end -> 10x streamline jumps <br>
+                Athletic hop out <br>
+                5x burpees <br>
+                Jump in -> 25 freestyle, sprint for half away and easy rest of the way. <br>
+            </p>
+            <img id="workout-img" src="images/personal-website-images/workouts/guy-swimming.jpg" alt="A man working hard">
 
         </main>
 
