fixed personal siteplan

--- a/swimmers-guide/site-plan.html
+++ b/swimmers-guide/site-plan.html
@@ -150,9 +150,9 @@
         Source: https://www.fitandwell.com/features/does-swimming-build-muscle
       </p>
       <p>Images for the Home page</p>
-        <img src="images/Personal Website Images/Swimming_HOME/lanelines.jpg" alt="image for homepage">
-        <img src="images/Personal Website Images/Swimming_HOME/me-swimming.jpg" alt="image for homepage">
-        <img src="images/Personal Website Images/Swimming_HOME/tired.jpg" alt="image for homepage">
+        <img src="images/personal-website-images/swimming-home/lanelines.jpg" alt="image for homepage">
+        <img src="images/personal-website-images/swimming-home/me-swimming.jpg" alt="image for homepage">
+        <img src="images/personal-website-images/swimming-home/tired.jpg" alt="image for homepage">
       </ul>
       <h3>Strokes Page</h3>
       <!-- Strokes -->
@@ -179,10 +179,10 @@
         Source: https://www.fitandwell.com/features/does-swimming-build-muscle
       </p>
       <p>Images for the Page 2</p>
-        <img src="images/Personal Website Images/Strokes/breaststroke.jpg" alt="image for page">
-        <img src="images/Personal Website Images/Strokes/butterfly.jpg" alt="image for page">
-        <img src="images/Personal Website Images/Strokes/girl-swimming.jpg" alt="image for page">
-        <img src="images/Personal Website Images/Strokes/take-your-marks.jpg" alt="image for page">
+        <img src="images/personal-website-images/strokes/breaststroke.jpg" alt="image for page">
+        <img src="images/personal-website-images/strokes/butterfly.jpg" alt="image for page">
+        <img src="images/personal-website-images/strokes/freestyle.jpg" alt="image for page">
+        <img src="images/personal-website-images/strokes/take-your-marks.jpg" alt="image for page">
       </ul>
       <h3>Workouts Page</h3>
       <!-- Workouts -->
@@ -214,8 +214,7 @@
         Jump in -> 25 freestyle, sprint for half away and easy rest of the way.
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/Personal Website Images/Workouts/diving.jpg" alt="image for page3">
-        <img src="images/Personal Website Images/Workouts/guy-swimming.jpg" alt="image for page3">
+        <img src="images/personal-website-images/workouts/guy-swimming.jpg" alt="image for page3">
       </ul>
       <hr>
       <h2>
