--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-        <a href="aboutme/index.html">About Me Page</a>             
+        <a href="aboutme/index.html">About Me Page</a>
+        <a href="learning_modules/positioning.html">Positioning Activity</a>
+        <a href="swimmers-guide/drop-down-web-comp.html">Website Component</a>
         <a href="wwr/index.html">White Water Rafting Website</a>
         <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-        <a href="positioning.html">Positioning Activity</a>
         <a href="swimmers-guide/index.html">Personal Website</a>
         <a href="swimmers-guide/site-plan.html">Personal Siteplan</a>
     </nav>
