fixed footer again

--- a/swimmers-guide/workouts.html
+++ b/swimmers-guide/workouts.html
@@ -86,7 +86,7 @@
 
             <p>Swimmer's Gear &copy; 2022 - Kyle Carroll</p>
             <a href="site-plan.html">Site Plan</a>
-            <a href="contact-us.html">Contact Us</a>
+            <a href="https://kyledc52.github.io/WDD130/">WDD 130 Projects</a>
 
             <div class="social-media">
                 <a href="https://facebook.com" target="_blank">
